<resources>
    <string name="app_name">TicTacToe</string>
    <string name="buttonOnePlayer">One Player</string>
    <string name="buttonTwoPlayer">Two Players</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonReset">Reset</string>
    <string name="txtPlayerOne">Player 1</string>
    <string name="txtPlayerTwo">Player 2</string>
    <string name="txtTie">Tie</string>
    <string name="txtBackgroundColor">Background Color</string>
    <string name="txtTextColor">Text Color</string>
</resources>
