<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnOnePlayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="176dp"
        android:text="@string/buttonOnePlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTwoPlayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonTwoPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOnePlayer" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTwoPlayer" />

</android.support.constraint.ConstraintLayout>