<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_2_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TableLayout
        android:id="@+id/tableGameBoard"
        android:layout_width="368dp"
        android:layout_height="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row_1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_1_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="67dp" />

            <Button
                android:id="@+id/btn_1_2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn_1_3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_2_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn_2_2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn_2_3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_3_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn_3_2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn_3_3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="36sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/namePlayerOne"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtPlayerOne"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namePlayerTwo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtPlayerTwo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTies"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtTie"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/namePlayerTwo"
        app:layout_constraintStart_toEndOf="@+id/namePlayerOne"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/buttonReset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/scorePlayerOne"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePlayerOne" />

    <EditText
        android:id="@+id/scoreTie"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="number"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/scorePlayerTwo"
        app:layout_constraintStart_toEndOf="@+id/scorePlayerOne"
        app:layout_constraintTop_toBottomOf="@+id/nameTies" />

    <EditText
        android:id="@+id/scorePlayerTwo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="number"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePlayerTwo" />

</android.support.constraint.ConstraintLayout>